<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?bgColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_16sdp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/swNight"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:drawableStart="@drawable/ic_night_light"
            android:drawablePadding="@dimen/_16sdp"
            android:text="@string/night_mode"
            android:textColor="?textColor"
            android:textSize="@dimen/_10ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="?cardBg" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_faq"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/_16sdp"
            android:gravity="center_vertical"
            android:text="@string/faqs"
            android:textColor="?textColor"
            android:textSize="@dimen/_10ssp"
            app:drawableEndCompat="@drawable/ic_arrow_left"
            app:drawableStartCompat="@drawable/ic_information" />


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="?cardBg" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_share_app"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/_16sdp"
            android:gravity="center_vertical"
            android:text="@string/share_app"
            android:textColor="?textColor"
            android:textSize="@dimen/_10ssp"
            app:drawableStartCompat="@drawable/ic_share" />



    </LinearLayout>
</ScrollView>